--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="icon" href="/images/itub.JPG" type="image/JPG" />
     <title>Enjifano Tamiru | Software Engineer & Flutter Developer</title>
     <meta name="description" content="Portfolio of Enjifano Tamiru - Software Engineer, Flutter Developer, Full Stack Web Developer, and Content Creator" />
     <meta name="author" content="Enjifano Tamiru" />
